Table Broke & Add Names

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">Salary Detection from Linkedin Job Postings</h1>
+      <h3> Akul Chennakesavan, Nikhil Nandikanti, Ton Quoc Bao Ngo, Ayush Panda, Alex Qiu </h3>
       <h3> CS 4641 Team 109</h3>
 
       {% if site.github.is_project_page %}
